syntax = "proto3";

package bst.v1;

import "bst/v1/communication.proto";
import "bst/v1/content.proto";
import "bst/v1/location.proto";
import "bst/v1/session.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

service SessionService {
  // Session Management
  // POST /sessions
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  // GET /sessions/{id}
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
  // PUT /sessions/{id}
  rpc UpdateSession(UpdateSessionRequest) returns (UpdateSessionResponse);
  // PUT /sessions/{id}/status
  rpc UpdateSessionStatus(UpdateSessionStatusRequest)
      returns (UpdateSessionStatusResponse);
  // PUT /sessions/{id}/cancel
  rpc CancelSession(CancelSessionRequest) returns (CancelSessionResponse);
  // POST /sessions/{id}/duplicate
  rpc DuplicateSession(DuplicateSessionRequest)
      returns (DuplicateSessionResponse);

  // Schedule & Location
  // PUT /sessions/{id}/schedule
  rpc UpdateSessionSchedule(UpdateSessionScheduleRequest)
      returns (UpdateSessionScheduleResponse);
  // PUT /sessions/{id}/location
  rpc UpdateSessionLocation(UpdateSessionLocationRequest)
      returns (UpdateSessionLocationResponse);

  // Communication
  // POST /sessions/{id}/notifications
  rpc CreateSessionNotification(CreateSessionNotificationRequest)
      returns (CreateSessionNotificationResponse);

  // Related Sessions
  // GET /sessions/{id}/related-sessions
  rpc ListRelatedSessions(ListRelatedSessionsRequest)
      returns (ListRelatedSessionsResponse);
  // POST /sessions/{id}/related-sessions
  rpc AddRelatedSession(AddRelatedSessionRequest)
      returns (AddRelatedSessionResponse);
}

// Session Management
message CreateSessionRequest {
  string                    title       = 1;
  string                    description = 2;
  google.protobuf.Timestamp event_date  = 3;
}

message CreateSessionResponse {
  Session session = 1;
}

message GetSessionRequest {
  int32 session_id = 1;
}

message GetSessionResponse {
  SessionDetail session = 1;
}

message UpdateSessionRequest {
  int32                     session_id  = 1;
  string                    title       = 2;
  string                    description = 3;
  google.protobuf.Timestamp event_date  = 4;
}

message UpdateSessionResponse {
  SessionDetail session = 1;
}

message UpdateSessionStatusRequest {
  int32         session_id = 1;
  SessionStatus status     = 2;
}

message UpdateSessionStatusResponse {
  SessionDetail session = 1;
}

message CancelSessionRequest {
  int32  session_id = 1;
  string reason     = 2;
}

message CancelSessionResponse {
  SessionDetail session = 1;
}

message DuplicateSessionRequest {
  int32                     session_id     = 1;
  google.protobuf.Timestamp new_event_date = 2;
}

message DuplicateSessionResponse {
  SessionDetail session = 1;
}

// Schedule & Location
message UpdateSessionScheduleRequest {
  int32     session_id = 1;
  Timetable timetable  = 2;
}

message UpdateSessionScheduleResponse {
  Timetable timetable = 1;
}

message UpdateSessionLocationRequest {
  int32    session_id = 1;
  Location location   = 2;
}

message UpdateSessionLocationResponse {
  Location location = 1;
}

// Song Resources
message AddSessionSongResourceRequest {
  int32    session_id = 1;
  int32    song_id    = 2;
  Resource resource   = 3;
}

message AddSessionSongResourceResponse {
  Resource resource = 1;
}

message ListSessionSongResourcesRequest {
  int32 session_id = 1;
  int32 song_id    = 2;
}

message ListSessionSongResourcesResponse {
  repeated Resource resources       = 1;
  string            next_page_token = 2;
  int32             total_size      = 3;
}

message DeleteSessionSongResourceRequest {
  int32 session_id  = 1;
  int32 song_id     = 2;
  int32 resource_id = 3;
}

message DeleteSessionSongResourceResponse {
  bool success = 1;
}

// Communication
message CreateSessionNotificationRequest {
  int32          session_id = 1;
  string         content    = 2;
  repeated int32 user_ids   = 3;
}

message CreateSessionNotificationResponse {
  bool success = 1;
}

// Session Resources
message AddSessionResourceRequest {
  int32    session_id = 1;
  Resource resource   = 2;
}

message AddSessionResourceResponse {
  Resource resource = 1;
}

message ListSessionResourcesRequest {
  int32 session_id = 1;
}

message ListSessionResourcesResponse {
  repeated Resource resources = 1;
}

message DeleteSessionResourceRequest {
  int32 session_id  = 1;
  int32 resource_id = 2;
}

message DeleteSessionResourceResponse {
  bool success = 1;
}

// Related Sessions
message ListRelatedSessionsRequest {
  int32 session_id = 1;
}

message ListRelatedSessionsResponse {
  repeated Session sessions = 1;
}

message AddRelatedSessionRequest {
  int32 session_id         = 1;
  int32 related_session_id = 2;
}

message AddRelatedSessionResponse {
  bool success = 1;
}
